list results in popup
* toggle detail view containing full URL and reason

--- a/tests/test.html
+++ b/tests/test.html
@@ -8,7 +8,7 @@
     <script src="broken.js"></script>
     <style>
         body {
-            background-image: url("https://example.com/inline.png");
+            background-image: url("https://example.com/this/is/a/very/long/url/because/we/have/to/check/such/things/too/lorem/ipsum/dolor/sit/amet/inline.png");
         }
     </style>
 </head>
