Add stats to popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,8 +13,8 @@
 <header>Broken Resources Finder found the following:</header>
 
 <div id="stats">
-    <span>checked resources:</span><span id="statsResources">0</span>
-    <span>hits:</span><span id="statsStrikes">0</span>
+    <span>checked resources:</span><span id="statsCheckedResources">0</span>
+    <span>hits:</span><span id="statsHits">0</span>
 </div>
 
 <div id="results">
