improved the way to get resource names
* cut of parameter and location hash
* adapt test files to cover this issue

--- a/tests/test.html
+++ b/tests/test.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <img src="local.gif">
-<img src="http://xxxxxxxxxxxxfofofofofo.com/src.jpg">
+<img src="http://xxxxxxxxxxxxfofofofofo.com/src.jpg#yolo">
 <div class="test">fofo</div>
 <div id="image"></div>
 <script>
