use material icons locally since remote resources are not allowed

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,8 +6,8 @@
     <title>Test page for the Broken Resources Finder WebExtension</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="material/material.min.css">
+    <link rel="stylesheet" href="material/material_icons.css">
     <link rel="stylesheet" href="css/popup.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
