--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,7 @@
 <div class="list-action mdl-card mdl-shadow--2dp">
 
     <div class="mdl-card__title mdl-card--expand title">
-        <h4 class="mdl-card__title-text">Broken Resources Finder</h4>
+        <i class="material-icons popup-brand">broken_image</i><h4 class="mdl-card__title-text">Broken Resources Finder</h4>
     </div>
 
     <div id="stats" class="mdl-card__supporting-text">
